start AMM example

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-12-21 Tue 10:59 -->
+<!-- 2022-03-03 Thu 19:56 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Decentralized Exchanges: Uniswap</title>
@@ -199,6 +199,27 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/lib/js/jquery.stickytableheaders.min.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/readtheorg.js"></script>
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        displayAlign: "center",
+        displayIndent: "0em",
+
+        "HTML-CSS": { scale: 100,
+                        linebreaks: { automatic: "false" },
+                        webFont: "TeX"
+                       },
+        SVG: {scale: 100,
+              linebreaks: { automatic: "false" },
+              font: "TeX"},
+        NativeMML: {scale: 100},
+        TeX: { equationNumbers: {autoNumber: "AMS"},
+               MultLineWidth: "85%",
+               TagSide: "right",
+               TagIndent: ".8em"
+             }
+});
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML"></script>
 </head>
 <body>
 <div id="content" class="content">
@@ -207,16 +228,23 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf3aecf3">1. Trade (Swap Tokens)</a></li>
-<li><a href="#org4aa68c8">2. Provide Liquidity</a>
+<li><a href="#orgf1843ec">1. Trade (Swap Tokens)</a></li>
+<li><a href="#orgb86f87a">2. Automated Market Maker</a></li>
+<li><a href="#org7409ee8">3. Order Book vs the Automated Market Maker</a>
 <ul>
-<li><a href="#org960abc2">2.1. Limit Order</a></li>
+<li><a href="#org4458114">3.1. Provide Liquidity</a></li>
+<li><a href="#org07f22bd">3.2. Limit Order</a></li>
 </ul>
 </li>
-<li><a href="#org464aef3">3. Order Book vs the Automated Market Maker</a></li>
+<li><a href="#org8822fa3">4. Uniswap and the SEC</a></li>
+<li><a href="#org49fb62f">5. Languages Used</a></li>
 </ul>
 </div>
 </div>
+<p>
+Uniswap is a protocol which allows for the exchange of ERC-20 tokens without a central authority for matching and clearing trades.  Uniswap is built on the Ethereum blockchain, and therefore does not allow the exchange of cryptocurrencies which are not part of the Ethereum ecosystem (ERC-20 tokens).  Because the protocol allows for peer-to-peer exchange, Uniswap is known as a <b>Decentralized Exchange</b>.
+</p>
+
 <p>
 <a href="https://docs.uniswap.org/">https://docs.uniswap.org/</a>
 </p>
@@ -226,21 +254,56 @@ Uniswap allows you to trade and make markets across Ethereum and
 Ethereum-based tokens.
 </p>
 
-<div id="outline-container-orgf3aecf3" class="outline-2">
-<h2 id="orgf3aecf3"><span class="section-number-2">1.</span> Trade (Swap Tokens)</h2>
+<div id="outline-container-orgf1843ec" class="outline-2">
+<h2 id="orgf1843ec"><span class="section-number-2">1.</span> Trade (Swap Tokens)</h2>
 </div>
 
-<div id="outline-container-org4aa68c8" class="outline-2">
-<h2 id="org4aa68c8"><span class="section-number-2">2.</span> Provide Liquidity</h2>
+<div id="outline-container-orgb86f87a" class="outline-2">
+<h2 id="orgb86f87a"><span class="section-number-2">2.</span> Automated Market Maker</h2>
 <div class="outline-text-2" id="text-2">
+<p>
+Uniswap uses a constant product relationship between currency pair.  The formula is:
+</p>
+
+<p>
+\(x*y = k\)
+</p>
+
+<p>
+where <i>x</i> and <i>y</i> are the reserve balances for currency <i>x</i> and <i>y</i> respectively, and <i>k</i> is a constant.  * denotes multiplication.
+</p>
+</div>
+</div>
+
+
+<div id="outline-container-org7409ee8" class="outline-2">
+<h2 id="org7409ee8"><span class="section-number-2">3.</span> Order Book vs the Automated Market Maker</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+Markets in stock, futures, and options are generally made by using a limit order book. <a href="https://financialmarkets.github.io/5mf_limit-order-book/">See this presentation if you need a review on limit order books.</a>  Order books are centralized mechanisms.  A stock may trade across 20 limit order books, however each limit order book is reliant on the exchanges servers to maintain the book and match trades.  All interaction involves the exchange's servers.
+</p>
+
+<p>
+The Uniswap protocol, on the other hand, implements an Automated Market Maker, which is an Ethereum Smart Contract we which holds liquidity reserves against which participants can transact.  That is, buy and sell orders execute against the pool of liquidity, and the relative size of the pools determine the relative price of each token.
+</p>
+
+<p>
+Notably, because Uniswap is a protocol, there are no personal barriers to transacting.  There is no age, income, etc requirements.  Think of <i>http</i>.
+</p>
+</div>
+
+<div id="outline-container-org4458114" class="outline-3">
+<h3 id="org4458114"><span class="section-number-3">3.1.</span> Provide Liquidity</h3>
+<div class="outline-text-3" id="text-3-1">
 <p>
 <a href="https://help.uniswap.org/en/articles/5391541-provide-liquidity-on-uniswap-v3">Guide to providing liquidity on Uniswap V3</a>
 </p>
 </div>
+</div>
 
-<div id="outline-container-org960abc2" class="outline-3">
-<h3 id="org960abc2"><span class="section-number-3">2.1.</span> Limit Order</h3>
-<div class="outline-text-3" id="text-2-1">
+<div id="outline-container-org07f22bd" class="outline-3">
+<h3 id="org07f22bd"><span class="section-number-3">3.2.</span> Limit Order</h3>
+<div class="outline-text-3" id="text-3-2">
 <p>
 To place what we know on stock markets as a <b>limit order</b> we can place what is termed a <b>range order</b> on Uniswap.  <a href="https://help.uniswap.org/en/articles/5455579-do-i-need-to-hold-both-tokens-to-provide-liquidity">See this answer.</a>
 </p>
@@ -248,14 +311,24 @@ To place what we know on stock markets as a <b>limit order</b> we can place what
 </div>
 </div>
 
+<div id="outline-container-org8822fa3" class="outline-2">
+<h2 id="org8822fa3"><span class="section-number-2">4.</span> Uniswap and the SEC</h2>
+</div>
 
-<div id="outline-container-org464aef3" class="outline-2">
-<h2 id="org464aef3"><span class="section-number-2">3.</span> Order Book vs the Automated Market Maker</h2>
+
+<div id="outline-container-org49fb62f" class="outline-2">
+<h2 id="org49fb62f"><span class="section-number-2">5.</span> Languages Used</h2>
+<div class="outline-text-2" id="text-5">
+<ul class="org-ul">
+<li>Solidity to implement the smart contracts.</li>
+<li>Typescript as an interface.</li>
+</ul>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Matt Brigida, Ph.D.</p>
-<p class="date">Created: 2021-12-21 Tue 10:59</p>
+<p class="date">Created: 2022-03-03 Thu 19:56</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
